# tetris

./: .gitignore  README.md  pyproject.toml
src/tetris/: __init__.py  __main__.py  core.py  display_map.py  fixed_map.py
src/tetris/terminal_runner/: display_map_surface.py  event.py  game.py  key_map.py  key_type.py
src/tetris/tetromino/: __init__.py  tetromino.py  tetromino_que.py  tetromino_shape.py  tetromino_type.py  wall_kick_data.py
tests/: test_main.py
