[project]
name = "tetris"
version = "0.0.1"
authors = [
  { name="ityeri", email="ityeri9@gmail.com" },
]
description = "Base tetris logic and terminal runner"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "blessed"
]

[project.optional-dependencies]
test = []

[project.urls]
Homepage = "https://github.com/ityeri/tetris"
Issues = "https://github.com/ityeri/tetris/issues"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"